--- a/app.config
+++ b/app.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Sistema_Estiba_PDQ.My.MySettings.dbestibaConnectionString" connectionString="Data Source=(local);Initial Catalog=dbestiba;Integrated Security=True" providerName="System.Data.SqlClient"/>
+        <add name="My.MySettings.dbestibaConnectionString" connectionString="Data Source=(local);Initial Catalog=dbestiba;Integrated Security=True" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
